--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>logo.ico">
     <!-- <link href="//db.onlinewebfonts.com/c/07a38bbad54db72a40b406bed1c72f53?family=Gotham+Pro" rel="stylesheet" type="text/css"/> -->
     <script src="https://kit.fontawesome.com/fd1658f3ec.js" crossorigin="anonymous"></script>
+    <script type="text/javascript"  src="https://apiv2.popupsmart.com/api/Bundle/391596" async></script>
     <title>ACPM Web</title>
   </head>
   <body>
