--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>logo.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>logo.ico" />
     <!-- <link href="//db.onlinewebfonts.com/c/07a38bbad54db72a40b406bed1c72f53?family=Gotham+Pro" rel="stylesheet" type="text/css"/> -->
-    <script src="https://kit.fontawesome.com/fd1658f3ec.js" crossorigin="anonymous"></script>
-    <script type="text/javascript"  src="https://apiv2.popupsmart.com/api/Bundle/391596" async></script>
+    <script
+      src="https://kit.fontawesome.com/fd1658f3ec.js"
+      crossorigin="anonymous"
+    ></script>
     <title>ACPM Web</title>
   </head>
   <body>
@@ -19,5 +21,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script
+      type="text/javascript"
+      src="https://apiv2.popupsmart.com/api/Bundle/391596"
+      async
+    ></script>
   </body>
 </html>
